[package]
name = "cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path="../utils"}
colored = "2.0.0"
anyhow = "1.0.42"
async-trait = "0.1.50"
tokio = { version = "1.5.0", features = ["full"] }
